# Clipin

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  project.yml
.github/workflows/: ci.yml
Clipin/: BridgingHeader.h
Clipin/App/: AppDelegate.swift  AppState.swift  ClipinApp.swift  ClipinTheme.swift  LauncherKeyRouting.swift  LauncherSearchScope.swift
Clipin/Resources/: Info.plist
Clipin/Services/: AppNotifications.swift  ArchiveService.swift  AutoBackupService.swift  CleanupService.swift  ClipImageThumbnailCache.swift  ClipPreviewResolver.swift  ClipboardMonitor.swift  ClipboardRepresentation.swift  FileClipboardContent.swift  FloatingNoteService.swift  HotKeyService.swift  MarkdownAttributedRenderer.swift  MarkdownRenderer.swift  MarkdownStyleApplier.swift  MarkdownStyleProvider.swift  MarkdownSyntaxHighlighter.swift  MarkdownTextStorage.swift  MarkdownWysiwygRenderer.swift  OcrService.swift  PasteService.swift  PermissionManager.swift  QuickLookPreviewService.swift  (+4 more)
ClipinTests/: ActionPaletteShortcutTests.swift  ArchiveServiceTests.swift  ArchiveV2Tests.swift  AutoBackupServiceTests.swift  ClipImageThumbnailCacheTests.swift  ClipPreviewResolverTests.swift  ClipboardRepresentationTests.swift  ClipboardViewModelTests.swift  FileClipboardContentTests.swift  HotKeyServiceTests.swift  LauncherBrowseModeTests.swift  LocalizationFormatTests.swift  PasteServiceRepresentationTests.swift  PasteServiceTests.swift
docs/: polish-log.md  update-reminder-design.md
rust/: Cargo.toml
rust/src/: lib.rs  models.rs  storage.rs
scripts/: build-rust.sh  deploy.sh
(+28 files in other folders)
