[package]
name = "clipin-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
name = "clipin_core"

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
